--- a/src/main/resources/assets/hammersandtables/lang/pl_pl.json
+++ b/src/main/resources/assets/hammersandtables/lang/pl_pl.json
@@ -2,15 +2,16 @@
   "item.hammersandtables.wooden_hammer": "Drewniany Młot",
   "item.hammersandtables.stone_hammer": "Kamienny Młot",
 
-  "item.minecraft.golden_helmet": "Lśniący Złoty Hełm",
-  "item.minecraft.golden_chestplate": "Lśniący Złoty Napierśnik",
-  "item.minecraft.golden_leggings": "Lśniące Złote Nogawice",
-  "item.minecraft.golden_boots": "Lśniące Złote Buty",
-  "item.minecraft.golden_axe": "Lśniąca Złota Siekiera",
-  "item.minecraft.golden_pickaxe": "Lśniący Złoty Kilof",
-  "item.minecraft.golden_sword": "Lśniący Złoty Miecz",
-  "item.minecraft.golden_hoe": "Lśniąca Złota Motyka",
-  "item.minecraft.golden_shovel": "Lśniąca Złota Łopata",
+  "item.shiny.minecraft.golden_helmet": "Lśniący Złoty Hełm",
+  "item.shiny.minecraft.golden_chestplate": "Lśniący Złoty Napierśnik",
+  "item.shiny.minecraft.golden_leggings": "Lśniące Złote Nogawice",
+  "item.shiny.minecraft.golden_boots": "Lśniące Złote Buty",
+  "item.shiny.minecraft.golden_axe": "Lśniąca Złota Siekiera",
+  "item.shiny.minecraft.golden_pickaxe": "Lśniący Złoty Kilof",
+  "item.shiny.minecraft.golden_sword": "Lśniący Złoty Miecz",
+  "item.shiny.minecraft.golden_hoe": "Lśniąca Złota Motyka",
+  "item.shiny.minecraft.golden_shovel": "Lśniąca Złota Łopata",
+  "item.shiny.hammersandtables.shiny_golden_hammer": "Lśniący Złoty Młot",
   "item.hammersandtables.shiny_golden_hammer": "Lśniący Złoty Młot",
 
   "item.hammersandtables.copper_pickaxe": "Miedziany Kilof",
@@ -121,9 +122,9 @@
   "text.autoconfig.hammersandtables.category.recipes": "Przedmioty i Receptury",
   "text.autoconfig.hammersandtables.category.sounds": "Dźwięki",
   "text.autoconfig.hammersandtables.category.trades": "Oferty Handlowe",
-  "text.autoconfig.hammersandtables.option.isTooltipsEnabled": "Dodaj podpisy dla przedmiotów, które wymagają stołu kowalskiego do wytworzenia [Wymagany Restart]",
-  "text.autoconfig.hammersandtables.option.isTooltipsEnabled.@Tooltip": "Dodaje podpisy informujące który stół kowalski jest wymagany aby stworzyć przedmiot",
   "text.autoconfig.hammersandtables.option.isTooltipsForGoldenItemsEnabled": "Dodaj podpisy dla przedmiotów, które mogą być użyte do handlu z Piglinami [Wymagany Restart]",
+  "text.autoconfig.hammersandtables.option.isSmithingSoundWhenCraftingEnabled": "Odtwarzaj dźwięki kucia przy wytwarzaniu przedmiotów wymagających stołu kowalskiego [Wymagany Restart]",
+  "text.autoconfig.hammersandtables.option.isSmeltingSoundWhenCraftingEnabled": "Odtwarzaj dźwięki gaszenia przy wytapianiu [Wymagany Restart]",
   "text.autoconfig.hammersandtables.option.isSoundsWhenCraftingEnabled": "Graj dźwięk kucia podczas tworzenia przedmiotów wymagających stołu kowalskiego i dźwięk gaszenia podczas wyciągania sztabek z pieca [Wymagany Restart]",
   "text.autoconfig.hammersandtables.option.isCopperRecipeBlocked": "Zablokuj miedziane receptury [Wymagany Restart]",
   "text.autoconfig.hammersandtables.option.isCopperRecipeBlocked.@Tooltip": "Miedziane przedmioty nie mogą zostać wytworzone jeśli nie stoisz przy Miedzianym Stole Kowalskim (lub lepszym stole kowalskim)",
@@ -171,13 +172,11 @@
 
   "text.hammersandtables.smithing_table_tooltip": "Tylko Osadnicy wiedzą jak tego użyć...",
 
-  "text.craftingmanipulator.crafting_requirements": "Wymagania do stworzenia (SHIFT)",
-  "text.craftingmanipulator.piglin_loved": "Uwielbiane przez Pigliny",
-  "text.craftingmanipulator.copper_workshop_required": "Warsztat: Miedziany Stół Kowalski",
-  "text.craftingmanipulator.iron_workshop_required": "Warsztat: Żelazny Stół Kowalski",
-  "text.craftingmanipulator.golden_workshop_required": "Warsztat: Złoty Stół Kowalski",
-  "text.craftingmanipulator.diamond_workshop_required": "Warsztat: Diamentowy Stół Kowalski",
-  "text.craftingmanipulator.piglin_workshop_required": "Warsztat: Kuźnia Piglinów",
+  "text.hammersandtables.copperRule": "Wymagany Miedziany Stół Kowalski",
+  "text.hammersandtables.ironRule": "Wymagany Żelazny Stół Kowalski",
+  "text.hammersandtables.goldRule": "Wymagany Złoty Stół Kowalski",
+  "text.hammersandtables.diamondRule": "Wymagany Diamentowy Stół Kowalski",
+  "text.hammersandtables.vanillaGoldRule": "Wymagana Kuźnia Piglinów",
 
 
 
