--- a/src/main/resources/assets/hammersandtables/lang/en_us.json
+++ b/src/main/resources/assets/hammersandtables/lang/en_us.json
@@ -9,6 +9,12 @@
   "tag.item.hammersandtables.powder_snow_walkable_boots": "Boots that let you walk on powder snow without sinking in it",
   "tag.item.hammersandtables.playing_smithing_sound_on_craft": "Items that play smithing sound when crafted",
   "tag.item.hammersandtables.playing_smelting_sound_on_craft": "Items that play smelting sound when crafted",
+  "tag.item.hammersandtables.enchantable.breach": "Items that can be enchanted with Breach using Enchanting Table",
+  "tag.item.hammersandtables.enchantable.smite": "Items that can be enchanted with Smite using Enchanting Table",
+  "tag.item.hammersandtables.enchantable.bane_of_arthropods": "Items that can be enchanted with Bane of Arthropods using Enchanting Table",
+  "tag.item.hammersandtables.enchantable.looting": "Items that can be enchanted with Looting using Enchanting Table",
+  "tag.item.hammersandtables.enchantable.knockback": "Items that can be enchanted with Knockback using Enchanting Table",
+  "tag.item.hammersandtables.enchantable.fire_aspect": "Items that can be enchanted with Fire Aspect using Enchanting Table",
 
 
   "item.hammersandtables.wooden_hammer": "Wooden Hammer",
