added master tools

--- a/src/main/resources/assets/hammersandtables/lang/en_us.json
+++ b/src/main/resources/assets/hammersandtables/lang/en_us.json
@@ -16,6 +16,7 @@
   "tag.item.hammersandtables.enchantable.knockback": "Items that can be enchanted with Knockback using Enchanting Table",
   "tag.item.hammersandtables.enchantable.fire_aspect": "Items that can be enchanted with Fire Aspect using Enchanting Table",
 
+  "item.hammersandtables.master_tools": "Master Tools",
 
   "item.hammersandtables.wooden_hammer": "Wooden Hammer",
   "item.hammersandtables.stone_hammer": "Stone Hammer",
