--- a/src/main/resources/assets/hammersandtables/lang/pl_pl.json
+++ b/src/main/resources/assets/hammersandtables/lang/pl_pl.json
@@ -16,6 +16,8 @@
   "tag.item.hammersandtables.enchantable.knockback": "Przedmioty, które można zakląć Odrzutem używając Stołu do Zaklinania",
   "tag.item.hammersandtables.enchantable.fire_aspect": "Przedmioty, które można zakląć Zaklętym Ogniem używając Stołu do Zaklinania",
 
+  "item.hammersandtables.master_tools": "Mistrzowskie Narzędzia",
+
   "item.hammersandtables.wooden_hammer": "Drewniany Młot",
   "item.hammersandtables.stone_hammer": "Kamienny Młot",
 
