--- a/src/main/resources/assets/hammersandtables/lang/en_us.json
+++ b/src/main/resources/assets/hammersandtables/lang/en_us.json
@@ -17,6 +17,13 @@
   "tag.item.hammersandtables.enchantable.fire_aspect": "Items that can be enchanted with Fire Aspect using Enchanting Table",
 
   "item.hammersandtables.master_tools": "Master Tools",
+  "item.hammersandtables.iron_crafting_kit": "Iron Crafting Kit",
+  "item.hammersandtables.golden_crafting_kit": "Golden Crafting Kit",
+  "item.hammersandtables.diamond_crafting_kit": "Diamond Crafting Kit",
+
+  "text.hammersandtables.item.craftingKit.for.copper": "Let's you craft copper items without smithing table",
+  "text.hammersandtables.item.craftingKit.for.iron": "Let's you craft iron items without smithing table",
+  "text.hammersandtables.item.craftingKit.for.gold": "Let's you craft golden items without smithing table",
 
   "item.hammersandtables.wooden_hammer": "Wooden Hammer",
   "item.hammersandtables.stone_hammer": "Stone Hammer",
