--- a/src/main/resources/assets/hammersandtables/lang/pl_pl.json
+++ b/src/main/resources/assets/hammersandtables/lang/pl_pl.json
@@ -21,6 +21,7 @@
   "item.hammersandtables.golden_crafting_kit": "Złoty Zestaw Rzemieślniczy",
   "item.hammersandtables.diamond_crafting_kit": "Diamentowy Zestaw Rzemieślniczy",
 
+  "text.hammersandtables.item.master_tools": "Pozwala ci ulepszyć kiepskiej jakości przedmioty",
   "text.hammersandtables.item.craftingKit.for.copper": "Pozwala ci tworzyć miedziane przedmioty bez stołu kowalskiego",
   "text.hammersandtables.item.craftingKit.for.iron": "Pozwala ci tworzyć żelazne przedmioty bez stołu kowalskiego",
   "text.hammersandtables.item.craftingKit.for.gold": "Pozwala ci tworzyć złote przedmioty bez stołu kowalskiego",
