--- a/src/main/resources/assets/hammersandtables/lang/pl_pl.json
+++ b/src/main/resources/assets/hammersandtables/lang/pl_pl.json
@@ -16,6 +16,8 @@
   "tag.item.hammersandtables.enchantable.knockback": "Przedmioty, które można zakląć Odrzutem używając Stołu do Zaklinania",
   "tag.item.hammersandtables.enchantable.fire_aspect": "Przedmioty, które można zakląć Zaklętym Ogniem używając Stołu do Zaklinania",
 
+  "tag.item.hammersandtables.slows_down_when_in_inventory": "Spowalniają gracza",
+
   "item.hammersandtables.master_tools": "Mistrzowskie Narzędzia",
   "item.hammersandtables.iron_crafting_kit": "Żelazny Zestaw Rzemieślniczy",
   "item.hammersandtables.golden_crafting_kit": "Złoty Zestaw Rzemieślniczy",
@@ -27,6 +29,7 @@
   "text.hammersandtables.item.craftingKit.for.gold": "Pozwala ci tworzyć złote przedmioty bez stołu kowalskiego",
 
   "text.hammersandtables.tooltip.bad_quality_item": "Kiepska jakość",
+  "text.hammersandtables.tooltip.heavy_item": "Ciężki",
 
   "item.hammersandtables.wooden_hammer": "Drewniany Młot",
   "item.hammersandtables.stone_hammer": "Kamienny Młot",
