added 'always_good_quality' tag

--- a/src/main/resources/assets/hammersandtables/lang/en_us.json
+++ b/src/main/resources/assets/hammersandtables/lang/en_us.json
@@ -17,6 +17,7 @@
   "tag.item.hammersandtables.enchantable.fire_aspect": "Items that can be enchanted with Fire Aspect using Enchanting Table",
 
   "tag.item.hammersandtables.slows_down_when_in_inventory": "Slows player down",
+  "tag.item.hammersandtables.always_good_quality": "Always good quality",
 
   "item.hammersandtables.master_tools": "Master Tools",
   "item.hammersandtables.iron_crafting_kit": "Iron Crafting Kit",
