--- a/src/main/resources/assets/hammersandtables/lang/pl_pl.json
+++ b/src/main/resources/assets/hammersandtables/lang/pl_pl.json
@@ -17,6 +17,7 @@
   "tag.item.hammersandtables.enchantable.fire_aspect": "Przedmioty, które można zakląć Zaklętym Ogniem używając Stołu do Zaklinania",
 
   "tag.item.hammersandtables.slows_down_when_in_inventory": "Spowalniają gracza",
+  "tag.item.hammersandtables.always_good_quality": "Zawsze dobrej jakości",
 
   "item.hammersandtables.master_tools": "Mistrzowskie Narzędzia",
   "item.hammersandtables.iron_crafting_kit": "Żelazny Zestaw Rzemieślniczy",
