--- a/src/main/resources/assets/hammersandtables/lang/en_us.json
+++ b/src/main/resources/assets/hammersandtables/lang/en_us.json
@@ -24,10 +24,10 @@
   "item.hammersandtables.golden_crafting_kit": "Golden Crafting Kit",
   "item.hammersandtables.diamond_crafting_kit": "Diamond Crafting Kit",
 
-  "text.hammersandtables.item.master_tools": "Let's you upgrade low quality items",
-  "text.hammersandtables.item.craftingKit.for.copper": "Let's you craft copper items without smithing table",
-  "text.hammersandtables.item.craftingKit.for.iron": "Let's you craft iron items without smithing table",
-  "text.hammersandtables.item.craftingKit.for.gold": "Let's you craft golden items without smithing table",
+  "text.hammersandtables.item.master_tools": "Lets you upgrade low quality items",
+  "text.hammersandtables.item.craftingKit.for.copper": "Lets you craft copper items without smithing table",
+  "text.hammersandtables.item.craftingKit.for.iron": "Lets you craft iron items without smithing table",
+  "text.hammersandtables.item.craftingKit.for.gold": "Lets you craft golden items without smithing table",
 
   "text.hammersandtables.tooltip.bad_quality_item": "Low quality",
   "text.hammersandtables.tooltip.heavy_item": "Heavy",
